--- a/package.json
+++ b/package.json
@@ -2,10 +2,10 @@
   "name": "parcel-project-template",
   "version": "2.0.0",
   "description": "",
-  "homepage": "https://Dyhless.github.io/team-project-bookmark",
+  "homepage": "https://GoitStudentsWorks.github.io/js_80_Dyhless",
   "scripts": {
     "start": "parcel src/*.html --open",
-    "build": "parcel build src/*.html --public-url /team-project-bookmark/"
+    "build": "parcel build src/*.html --public-url /js_80_Dyhless/"
   },
   "repository": {
     "type": "git",
